build/src/krnl_prj/solution1/csim/report/krnl_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../../../src/mem_mngr.cpp in debug mode
../../../../../../src/mem_mngr.cpp:6:1: error: ‘nodes_in_level’ does not name a type
 nodes_in_level[0] = 7;
 ^~~~~~~~~~~~~~
../../../../../../src/mem_mngr.cpp:7:1: error: ‘nodes_in_level’ does not name a type
 nodes_in_level[1] = 4;
 ^~~~~~~~~~~~~~
make[4]: *** [obj/mem_mngr.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
